# kilam-launcher

./: .gitignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/business/: auth.rs  client_provisioner.rs  config.rs  downloader.rs  event_store.rs  launcher.rs
src-tauri/src/commands/: auth.rs  config.rs  downloader.rs  event_store.rs  launcher.rs  mod.rs
src-tauri/src/infra/: auth.rs  client_provisioner.rs  config.rs  downloader.rs  event_store.rs  launcher.rs  microsoft_auth.rs  mod.rs
src/components/: ConfigTest.tsx  EventItem.tsx  EventList.tsx
src/components/ui/: Button.tsx  EventCard.tsx  Input.tsx  ProgressBar.tsx  Tag.tsx
src/debug/: ConfigTest.tsx
src/lib/: ipc.ts
src/pages/: DownloadScreen.tsx  LoginScreen.tsx  MainScreen.tsx  SettingsScreen.tsx
src/store/: auth.ts  config.ts  navigation.ts
src/styles/: global.css  shared.css
src/styles/components/: button.css  event-card.css  input.css  progress-bar.css  tag.css
src/styles/pages/: download.css  login.css  main.css  settings.css
src/types/: auth.ts  config.ts  downloader.ts  error.ts  event_store.ts
