[package]
name = "kilam-launcher"
version = "0.1.0"
description = "KILAM Launcher — cliente de escritorio para eventos de Minecraft"
authors = ["susarroDEV"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kilam_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tauri-plugin-store = "2.4.3"
md-5 = "0.11.0"
uuid = { version = "1.23.2", features = ["v4"] }
reqwest = { version = "0.13.4", features = ["json", "rustls"] }
sha2 = "0.11.0"
hex = "0.4.3"
async-trait = "0.1.89"
sha1 = "0.11.0"
zip = "8.6.0"
